# dcspoof

./: README.md  pyproject.toml
.github/workflows/: ci.yml
dcspoof/: __init__.py  identify.py
