[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcspoof"
version = "1.0.0"
description = "a simple lib for managing discord presence indicators"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "nxyy", email = "clubbed@duck.com"}
]
requires-python = ">=3.10"
keywords = ["discord", "status", "presence", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "discord.py>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0",
    "ruff>=0.0.250",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/nxyyhaha/dcspoof"
Repository = "https://github.com/nxyyhaha/dcspoof.git"
Issues = "https://github.com/nxyyhaha/dcspoof/issues"

[tool.setuptools]
packages = ["dcspoof"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
